--- a/.github/workflows/practica_workflows.yml
+++ b/.github/workflows/practica_workflows.yml
@@ -3,7 +3,7 @@ on:
   issues:
     types: [opened,closed]
 jobs:
-  AlAbrir:
+  AlAbrirOCerrar:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Caso Abierto / Cerrado ${{ github.event.issue.number }}"
