--- a/.github/workflows/versiones.yml
+++ b/.github/workflows/versiones.yml
@@ -1,8 +1,8 @@
 jobs:
   build:
-    runs-on: ubuntu-lates
-    strategy:
-      matrix:
-        node:[6, 8, 10]
-    steps:
-      - run: echo "caso ${{ matrix.node }}"
+   runs-on: ubuntu-latest
+   strategy:
+     matrix:
+       node:[6, 8, 10]
+      steps:
+         - run: echo "caso ${{ matrix.node }}"
